syntax = "proto3";

package hello;

option go_package = "grpc-server/pb";

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
  rpc SayHelloServerStream (HelloRequest) returns (stream HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
